# socks

./: CMakeLists.txt  socks4.rfc
include/: socks.h
src/: readFromSocket.c  sendToSocket.c  socket_config.c  socks_accept.c  socks_close.c  socks_connect.c  socks_init.c  socks_listen.c  socks_log.c  thread.c
src/include/: socket_config.h  socks4.h  socks_internal.h
src/test/: client.c  server.c
